# indi-villa-django

./: .gitignore  manage.py  pyproject.toml  requirements.txt
accounts/: urls.py  views.py
agencies/: admin.py  models.py
agencies/migrations/: 0001_initial.py  0002_alter_agency_options.py
agents/: admin.py  models.py
agents/migrations/: 0001_initial.py
contacts/: admin.py  models.py  views.py
contacts/migrations/: 0001_initial.py
indivilla/: asgi.py  settings.py  urls.py  wsgi.py
listings/: admin.py  choices.py  models.py  urls.py  views.py
listings/migrations/: 0001_initial.py  0002_alter_listing_listing_category.py
pages/: models.py  views.py
templates/: accounts_base.html  base.html
templates/accounts/: dashboard.html  login.html  signup.html
templates/admin/: base_site.html
templates/listings/: listing.html  listings.html
templates/pages/: about.html  index.html
templates/partials/: _alerts.html  _footer.html  _navbar.html
