[tool.poetry]
name = "indi-villa-project"
version = "0.1.0"
description = ""
authors = ["Sai SriHarsha Griddaluru <sriharsha.9554@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"
flake8 = "^3.9.1"
pylint = "^2.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
